# unit_testing

./: .gitignore  README.md  pyproject.toml
basic_tests/: calculator.py  test_calculator.py
mock_tests/mock_a_class/: test_payment.py
mock_tests/mock_api_calls/: test_weather.py
mock_tests/mock_simple_function/: math_utils.py  test_math_utils.py
src/example_code/mock_tests/mock_a_class/: payment.py
src/example_code/mock_tests/mock_api_calls/: weather.py
tests/: conftest.py
tests/basic_tests/: test_calculator.py
tests/mock_tests/mock_a_class/: test_payment.py
tests/mock_tests/mock_api_calls/: test_weather.py
tests/mock_tests/mock_simple_function/: test_math_utils.py
