[project]
name = "example_code"
version = "0.1.0"
description = "Unit testing demo"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=6.0.0",
    "requests>=2.28.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"